2006-08-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/*.c: Applied Patch#1533798: Remove pre-GTK2 code from geda
	by Peter Brett.

2006-07-24 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/s_toplevel.c: Added initialization of missing variable 
	(toplevel->prev).  This caused a rare segmentation fault 
	(Bug#1528080)

2006-07-23 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/defines.h: Applied mouse pan patch by Peter Clifton. 
	(Patch #1527361): Allow middle button panning in gschem

	* include/struct.h, src/s_toplevel.c: Added variables to support
	(mousepan-gain #) rc keyword.

2006-07-23  Mike Jarabek  <mjarabek@istop.com>

	* src/o_text_basic.c: Fixed 180 degree rotated text so that it
	prints upside right unstead of upside down in the postscipt
	back end.

2006-07-15 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/a_basic.c, src/f_basic.c, src/f_print.c, src/g_basic.c,
	src/g_rc.c, src/g_smob.c, src/i_vars.c, src/o_arc_basic.c,
	src/o_attrib.c, src/o_box_basic.c, src/o_bus_basic.c, 
	src/o_circle_basic.c, src/o_complex_basic.c, src/o_line_basic.c,
	src/o_net_basic.c, src/o_picture.c, src/o_pin_basic.c, 
	src/o_selection.c, src/o_text_basic.c, src/s_attrib.c, src/s_basic.c,
	src/s_color.c, src/s_conn.c, src/s_hierarchy.c, src/s_menu.c,
	src/s_papersizes.c, src/s_slib.c, src/s_stretch.c, src/s_tile.c,
	src/s_undo.c, src/u_basic.c: Converted all free, ?alloc, and 
	strdup calls to use g_free, g_?alloc, and g_strdup.  This is the
	first phase in fixing the slice crash under glib 2.10.x.

	* src/libgeda.c: Clarified putenv/free comment

	* src/o_attrib.c, src/o_complex_basic.c src/o_text_basic.c: 
	Removed some residual noweb #lines and comments

	* src/s_conn.c: Finally figured out that setting a freed object's
	data field was causing lots of trouble for glib's slice allocator.

	* src/s_basic.c src/o_picture.c: Changed all g_free() calls on
	all pixbufs to be g_object_unref.  This was causing crashes with
	glib 2.10.x.
