@@ -3,6 +3,9 @@
 	* src/*.c: Applied Patch#1533798: Remove pre-GTK2 code from geda
 	by Peter Brett.
 
+	* src/a_basic.c: Applied Patch#1534089: libgeda: bugfix for
+	segfault when loading corrupted file by Tomaz Solc.
+
 2006-07-24 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* src/s_toplevel.c: Added initialization of missing variable 
